# basic_opengl

./: .gitignore  CMakeLists.txt  README.md  contributors.txt
Code/: #Shader.cpp#  .#Shader.cpp  .#picopng.cpp  Cube.h  Light.h  Makefile  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.cpp~  Shader.h  Shader.h~  Types.h  Types.h~  build.bat  build.bat~  main.cpp  main.cpp~  shader.frag  shader.frag~  shader.geom  shader.vert  simpleGame
Code/Graphics/: graphics.h  material.h
Codev0.1/: Makefile  Texture.cpp  Texture.h
Dependencies/include/glad/: glad.h
Dependencies/lib/: assimpd.lib  glad.c  glad.cpp  libSOIL.dylib
Shaders/: lightShader.frag  lightShader.vert  modelLoading.frag  modelLoading.vert  shader.vert
Subjects/basic_lighting/Shaders/: lightShader.vert
Subjects/basic_textures/Code/: Main.cpp
Subjects/basic_textures/Shaders/: shader.vert
Subjects/camera_system/Code/: Camera.h  Main.cpp
Subjects/coordinate_system/Code/: Main.cpp
Subjects/coordinate_system/Shaders/: shader.vert
Subjects/directional_light/Code/: Main.cpp
Subjects/directional_light/Shaders/: lightShader.frag  lightShader.vert
Subjects/model_loading/Code/: Mesh.cpp  (+2 more)
basic_lighting/Shaders/: lightShader.frag
basic_textures/Code/: Makefile  Texture.h
basic_textures/Shaders/: shader.frag
camera_system/Code/: Camera.cpp  Shader.cpp
coordinate_system/Shaders/: shader.frag
first_light_scene/Shaders/: lightShader.frag
light-maps/Code/: Texture.cpp
point_light/Code/: Camera.cpp
point_light/Shaders/: lightObjectShader.frag  lightObjectShader.vert  lightShader.frag
shaders/: advanced.frag  advanced.vert
spot_light/Shaders/: lightShader.frag
src/: Constants.h  Cube.cpp  Cube.h  Light.h  Mesh.cpp  Model.cpp  Model.h  Plane.cpp  Plane.h  Shader.cpp  Shader.h  Texture.h  TextureLoader.cpp  TextureLoader.h  World.h  main.cpp
transformation_matrix/Code/: Main.cpp
transformation_matrix/Shaders/: shader.vert
triangle_square_color_anim/Code/: Makefile
triangle_square_color_anim/Shaders/: shader.frag
(+11 files in other folders)
